# openmp-practice

fft/: .cproject  .project  fft.cpp
lab/: CMakeLists.txt  additionalMPI.cpp  additionalOMP.cpp  additionalOMP_sequential.cpp  diff.cpp  exec.ps1  mpiParallel.cpp  ompParallel.cpp  sequential.cpp
matrix-multiply/: .cproject  .project  matrix-multiply.cpp
star_sudoku/: .cproject  .project  star_sudoku.cpp  test0.txt  test1.txt  test2.txt
